[package]
name = "rust-wallclock-timer"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
rustc-hash = "2"
snafu = "0.8"
log = "0.4"
uuid = { version = "1", optional = true, features = ["v4"] }

[dev-dependencies]
simple_logger = "5"

[features]
default = ["uuid"]
uuid = ["dep:uuid"]
