[package]
name = "wallclock-timer"
version = "0.1.0"
edition = "2024"
description = "Wall-clock-based timer utility."
documentation = "https://docs.rs/wallclock-timer"
homepage = "https://github.com/Bathtor/rust-wallclock-timer"
repository = "https://github.com/Bathtor/rust-wallclock-timer"
readme = "README.md"
keywords = ["timer", "timeout"]
categories = ["date-and-time"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossbeam-channel = "0.5"
rustc-hash = "2"
snafu = "0.8"
log = "0.4"
uuid = { version = "1", optional = true, features = ["v4"] }
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "clock",
] }

[dev-dependencies]
simple_logger = "5"

[features]
default = ["uuid"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
